--- a/index.html
+++ b/index.html
@@ -3,28 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dom-Assignment</title>
 </head>
 <body>
-    
+<!--Q1-->
+<!-- <p id="">Message</p> -->
 
-<!-- Q1 -->
-<!-- <p id="para">Masssge</p> -->
+<!--Q2-->
+<!-- <input type="text" placeholder="enter" id="inputname">
+<br/><br/>
+<button onclick="cl()">Click here</button>
+<br/><br/>
+<div id="result"></div> -->
+
+<!--Q3-->
+<!-- <button  onclick="sec()">click here</button>
+<br/><br/>
+<section id="container"></section> -->
 
 
-<!-- Q2 -->
- <!-- <input type="text" placeholder="enter your name" id="nameinput">
- <button onclick="user()" >cilck here</button>
- <h1 id="head"></h1> -->
+<!--Q4-->
+<!-- <h1 id="mainTitle">Hello javascript</h1> -->
 
 
-<!-- Q3 -->
+<!--Q5-->
+<!-- <input   onclick="number()"  type="number" placeholder="enter your number"  id="num1">
+<br/><br/>
+<p id="out-put"></p> -->
 
-<!-- <section id="container"></section>
-<button onclick="sec()">cilck here</button> -->
 
-<!-- Q4 -->
- <!-- <h1 id="mainTitle">mainTitle</h1> -->
+<!--Q6-->
+<button onclick="sub()" class="submit-btn">click here</button>
 
 
 <script src="app.js"></script>
