--- a/index.html
+++ b/index.html
@@ -34,7 +34,60 @@
 
 
 <!--Q6-->
-<button onclick="sub()" class="submit-btn">click here</button>
+<!-- <button onclick="sub()"class="submit-btn">click here</button> -->
+
+
+
+<!--Q7-->
+<!-- <input  type="number" placeholder="enter your value" id="first">
+<br/><br/>
+<input  type="number"  placeholder=" enter your value"  id="second" >
+<br/><br/>
+<button  onclick="num()" >add the values</button>
+<br/><br/>
+<span id="sum"></span> -->
+
+
+
+<!--Q8-->
+<!-- <p id="description">Welcome!</p> -->
+
+
+<!-- Q9--> 
+ <!-- <div id="box"></div> -->
+
+
+
+<!--Q10-->
+<!-- <input type="text"  placeholder="enter your email"  id="email" >
+<button onclick="enter()">cilck here</button> -->
+
+
+<!--Q11-->
+<!-- <p id="para">Lorem ipsum dolor sit, amet consectetur adipisicing.</p> -->
+
+
+<!-- 12--> 
+ <input type="text" placeholder="enter your fullname" id="fullName">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <script src="app.js"></script>
