all quetion solve

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
 
 <!-- 15--> 
-<!-- <input onclick="check()"  type="checkbox" id="agree"> 
+<!-- <input onclick="check()"  type="checkbox" id="inputcheck"> 
 <br/><br/>
-<p id="para"></p> -->
-
+<p id="para"></p>
+ -->
 
 
 
@@ -100,7 +100,7 @@
 
 
 <!-- 16--> 
-<select style="width: 150px" id="options" >
+<!-- <select  onclick="cite()" style="width: 150px" id="options" >
     <option  value="karachi">karachi</option>
     <option  value="Quetta">Quetta</option>
     <option  value="Sukkur">Sukkur</option>
@@ -108,10 +108,34 @@
 <br/><br/>
 <span id="selectedValue"></span>
 
+ -->
+
+
+ 
+<!--17--> 
+<!-- <input  onclick="date()"  type="datetime-local" id="inputdate" >
+<br/><br/>
+<p id="dateTime"></p> -->
+
+
+<!--18-->
+<!-- <p id="togglePara" ></p>  -->
 
 
 
 
+<!--19-->
+ <!-- <input type="number"placeholder="enter your age" id="age">
+<br/><br/>
+<button onclick="btn()">Submit</button>
+<br/><br/>
+<span id="spn"></span>  -->
+
+
+<!--20-->
+<!-- <input type="text" placeholder="search here" id="searchBox">
+<br/><br/>
+<button onclick="search()" >cilck here</button> -->
 
 
 
